--- a/style.css
+++ b/style.css
@@ -48,3 +48,26 @@ button {
 button:hover {
   background: pink;
 }
+
+#date-time {
+  font-size: 12px;
+  color: white;
+  margin-top: 20px;
+}
+
+#temp-div p {
+  font-size: 60px;
+  margin-top: -30px;
+}
+
+#weather-info {
+  font-size: 20px;
+}
+
+#weather-icon {
+  width: 200px;
+  height: 200px;
+  margin: 0 auto 10px;
+  margin-bottom: 0;
+  display: none;
+}
